# GridTactics

./: .gitignore  .travis.yml  CHANGELOG.md  GridTactics.cabal  README.md  actions.md  how2play.md  stack.yaml  todo.md
.github/workflows/: ci.yml
app/: Client.hs  Main.hs  Server.hs
src/: API.hs  GridTactics.hs  Mechanics.hs  SeqWorld.hs  TUI.hs  Util.hs  WebInstances.hs
