cabal-version:       2.4
name:                GridTactics
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/c47s/GridTactics
bug-reports:         https://github.com/c47s/GridTactics/issues
license:             MIT
license-file:        LICENSE
author:              c47s
maintainer:          c47s <36133719+c47s@users.noreply.github.com>
copyright:           2022 c47s
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/c47s/GridTactics.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , relude
  
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     GridTactics

executable GridTactics
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       GridTactics
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
